# MRO

./: .gitignore  BUILD.md  CHANGELOG.md  LICENSE  MOD_SUMMARY.txt  MRO.esp  MRO_GenerateESP.py  README.md  nextsession.txt  release.sh
.claude/: settings.local.json
.github/workflows/: native.yml
FOMOD/fomod/: ModuleConfig.xml  info.xml
MRO-flat/: MRO.esp
MRO-flat/Optional/: Experience.ini
MRO-flat/Scripts/: MRO_AbsorbMGEF.pex  MRO_EventsMGEF.pex  MRO_MCM.pex  MRO_StartupQuest.pex
MRO-flat/fomod/: ModuleConfig.xml  info.xml
MRO-nofomod/: MRO.esp
MRO-nofomod/Scripts/: MRO_AbsorbMGEF.pex  MRO_EventsMGEF.pex  MRO_MCM.pex  MRO_StartupQuest.pex
MRO-package/Core/: MRO.esp
MRO-package/Optional/: Experience.ini
MRO-package/fomod/: ModuleConfig.xml  info.xml
SEQ/: MRO.seq
Scripts/: MRO_AbsorbMGEF.pex  MRO_FollowerAlias.pex  MRO_MCM.pex  MRO_StartupQuest.pex
Source/Scripts/: AssociationType.psc  Class.psc  Debug.psc  EffectShader.psc  EncounterZone.psc  Furniture.psc  GlobalVariable.psc  ImageSpaceModifier.psc  Key.psc  LocationRefType.psc  MRO_AbsorbMGEF.psc  (+15 more)
assets/: make_banner.sh  make_logo_16x9.sh  nexus-changelog-1.0.0.txt  nexus-description.bbcode
docs/: BEYOND_REQUIEM.md  DEBUGGING.md  DYNAMIC_OR_DROP.md  INDEX.md  MANUAL_MOD_CREATION_GUIDE.md  NATIVE_REWRITE_PLAN.md  PROJECT_PLAYBOOK.md  TESTING.md  WEAPON_XP_MODELS.md
native/: CMakeLists.txt  CMakePresets.json  plugin.cpp  vcpkg-configuration.json  vcpkg.json
tools/: audit_esp.py  compile.sh  dump_record.py  verify_hook_site.py  verify_hook_site_live.py
xEdit/: MRO_CreatePlugin.pas
(+27 files in other folders)
